[JAVA-19668] Created libraries-jdk8 module